[metadata]
name = aioflask
version = 0.3.1.dev0
author = Miguel Grinberg
author_email = miguel.grinberg@gmail.com
description = Flask running on asyncio.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miguelgrinberg/aioflask
project_urls =
    Bug Tracker = https://github.com/miguelgrinberg/aioflask/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    greenletio
    flask >= 2
    uvicorn

[options.packages.find]
where = src

[options.entry_points]
flask.commands = 
    aiorun = aioflask.cli:run_command
